<resources>
    <string name="app_name">Gastroventure</string>
    <string name="review_store_name">상호명</string>
    <string name="review_menu">메뉴</string>
    <string name="review_writer">작성자</string>

    <string name="store_name">상점이름</string>
    <string name="menu">메뉴</string>
    <string name="review_content">리뷰 내용</string>
    <string name="review_rating">리뷰 별점</string>
    <string name="review_hyphen"> - </string>
    <string name="review_image_add">이미지 추가</string>
    <string name="review_insert">리뷰 입력</string>
    <string name="review_modify">수정 하기</string>
    <string name="review_cancel">뒤로 가기</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Ted Permission -->
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>

</resources>
