<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.review.ReviewInsertFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/review_insert_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:hint="@string/store_name" />

        <EditText
            android:id="@+id/review_insert_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:hint="@string/menu" />

        <RatingBar
            android:id="@+id/review_insert_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:numStars="5"
            android:stepSize="0.5" />

        <EditText
            android:id="@+id/review_insert_content"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:paddingLeft="5dp"
            android:background="@drawable/border"
            android:hint="@string/review_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/insert_rcv_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/border"
            tools:listitem="@layout/image_item">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/review_insert_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/act_insert_content_text"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:text="@string/review_image_add" />


            <Button
                android:id="@+id/review_insert_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:text="@string/review_insert" />

            <Button
                android:id="@+id/review_cancel_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:text="@string/review_cancel" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>