<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".menu.review.ReviewDetailFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/review_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border">

            <LinearLayout
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/review_detail_store_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/store_name"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/review_hyphen"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/review_detail_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/review_detail_store_name"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/menu"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RatingBar
                android:id="@+id/review_detail_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_centerHorizontal="true"
                android:numStars="5"
                android:stepSize="0.5"
                android:isIndicator="true"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/review_detail_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/review_detail_rating"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:hint="@string/review_content"
                android:textSize="30dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/review_detail_rcv_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/review_detail_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="15dp"
                tools:listitem="@layout/image_item" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/review_detail"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/review_detail_modify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:text="@string/review_modify" />

            <Button
                android:id="@+id/review_detail_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:text="@string/review_cancel" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>